# CubeGame

./: CMakeLists.txt
include/glad/: glad.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Direction.hpp  glad.c  main.cpp
src/models/: cube.hpp
src/objects/: Cube.cpp  Cube.hpp  Object.hpp
src/render/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp
